# push-swap

./: 1  CMakeLists.txt  Makefile  checker  push_swap  test
includes/: checker.h  commons.h  header.h  obj_stack.h  swap.h  test_parser.h  tests.h  z_checker.h  z_checker_error.h
libft/: Makefile  ft_atoi.c  ft_is_whitespace.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_strcat.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  ft_strsub.c  ft_tolower.c  ft_toupper.c  ft_twlstadd.c  ft_twlstmap.c  ft_twlstnew.c  get_next_line.c  get_next_line.h  libft.h  libft.h.gch
src/: z_checker_error.c
src/checker/: checker.c  exec.c  parse_commands.c
src/common/: num_creation.c  obj_stack.c  z_number_validation.c
src/commons/: check_sort.c  command.c  commands_1.c  commands_2.c  commands_3.c  commands_4.c  error.c  iter.c  iter_b.c  markup.c  parse_nums.c  prepare_a.c  validate_arg.c
src/swap/: 1.txt  algorithm.c  check_sort.c  choose_element.c  choose_element_count.c  commands.c  commands_1.c  commands_2.c  commands_3.c  commands_4.c  execute_command.c  find_markup_head.c  find_max_len.c  get_from_b.c  init_deque.c  iter.c  main.c  markup.c  next.c  parse_nums.c  parser.c  prepare_a.c  simple_commands.c  validate_arg.c  validate_cl.c
src/tests_src/: Makefile  commands.c  init_deque.c  main.c  parse_nums_test.c  validate_cl.c
